--- a/modulo_3_flask_em_tempo_real/requirements.txt
+++ b/modulo_3_flask_em_tempo_real/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.0
+#Flask==2.3.0
 qrcode==7.4.2
-pillow==10.2.0
-Flask-SockeIO==5.3.6
+#pillow==10.2.0
+flask-socketio==5.3.6
 Flask-SQLAlchemy==3.1.1
