--- a/modulo_7_autenticacao_JWT_seguranca/.vscode/settings.json
+++ b/modulo_7_autenticacao_JWT_seguranca/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "python.lintig.enabled": false,
-    "python.lintig.pylintEnabled": false,
-    "file.exclude": {
+    "python.linting.enabled": false,
+    "python.linting.pylintEnabled": false,
+    "files.exclude": {
         "**/*.pyc": {"when": "$(basename).py"},
         "**/__pycache__": true,
         "**/*.pytest_cache": true
